--- a/p8105_hw6_alc2279.md
+++ b/p8105_hw6_alc2279.md
@@ -112,14 +112,12 @@ balt_solved_logistic =
   glm(solved ~ victim_age + victim_sex + victim_race_white, data = ., family = binomial())
 
   balt_solved_logistic %>% 
-    broom::tidy(conf.int = TRUE) %>% 
-    mutate(odds_ratio = exp(estimate),
-           adj_conf_low = exp(conf.low), 
-           adj_conf_high = exp(conf.high),
-           term = recode(term, victim_sexMale = "victim_sex: male", 
+    broom::tidy(conf.int = TRUE, exponentiate = TRUE) %>% 
+    janitor::clean_names() %>%
+    mutate(term = recode(term, victim_sexMale = "victim_sex: male", 
                          victim_race_whitenonwhite = "victim_race: nonwhite")) %>% 
-    select(Term = term, "Adj Odds Ratio" = odds_ratio, "Adj Conf: Lower bound" = adj_conf_low, 
-           "Adj Conf: Upper bound" = adj_conf_high) %>% 
+    select(Term = term, "Adj Odds Ratio" = estimate, "Adj Conf: Lower bound" = conf_low, 
+           "Adj Conf: Upper bound" = conf_high) %>% 
     knitr::kable(digits = 3)
 ```
 
@@ -166,12 +164,33 @@ glm_homicide_function = function(df) {
   glm(solved ~ victim_age + victim_sex + victim_race_white, data = df, family = binomial())
 }
 
+
 homocide_odds_city = 
   homicide_data %>% 
   group_by(city_state) %>%       
   nest() %>% 
   mutate(log_models = map(.x = data, glm_homicide_function),
-         tidy_models = map(log_models, broom::tidy, conf.int = TRUE))  %>% 
+         tidy_models = map(log_models, broom::tidy))  %>% 
+  select(-data, -log_models) %>% 
+  unnest() %>% 
+  janitor::clean_names() %>% 
+  mutate(conf_low = estimate - (1.96 * std_error), 
+         conf_high = estimate + (1.96 * std_error)) %>% 
+  filter(term == "victim_race_whitenonwhite") %>% 
+  select(city_state, estimate, conf_low, conf_high)
+
+
+broom_function = function(df) {
+  df %>% 
+    broom::tidy(conf.int = TRUE, exponentiate = TRUE)
+}
+
+
+  homicide_data %>% 
+  group_by(city_state) %>%       
+  nest() %>% 
+  mutate(log_models = map(.x = data, glm_homicide_function),
+         tidy_models = map(log_models, broom_function))  %>% 
   select(-data, -log_models) %>% 
   unnest() %>% 
   janitor::clean_names() %>% 
@@ -678,6 +697,21 @@ homocide_odds_city =
 
     ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
 
+    ## # A tibble: 47 x 4
+    ##    city_state      odds_ratio conf_low conf_high
+    ##    <chr>                <dbl>    <dbl>     <dbl>
+    ##  1 Albuquerque, NM       1.99     1.52      3.08
+    ##  2 Atlanta, GA           2.15     1.54      3.75
+    ##  3 Baltimore, MD         1.57     1.38      1.89
+    ##  4 Baton Rouge, LA       1.93     1.35      3.97
+    ##  5 Birmingham, AL        2.85     1.86      5.81
+    ##  6 Boston, MA            1.13     1.05      1.31
+    ##  7 Buffalo, NY           1.56     1.27      2.25
+    ##  8 Charlotte, NC         1.74     1.37      2.54
+    ##  9 Chicago, IL           1.78     1.56      2.12
+    ## 10 Cincinnati, OH        1.39     1.20      1.74
+    ## # ... with 37 more rows
+
 Part 5: Make a plot of the models by city
 -----------------------------------------
 
@@ -685,8 +719,8 @@ Create a plot that shows the estimated ORs and CIs for each city. Organize citie
 
 ``` r
 homocide_odds_city %>% 
-  mutate(city_state = fct_reorder(city_state, desc(odds_ratio))) %>%
-  ggplot(aes(x = city_state, y = odds_ratio, color = city_state)) + 
+  mutate(city_state = fct_reorder(city_state, desc(estimate))) %>%
+  ggplot(aes(x = city_state, y = estimate, color = city_state)) + 
     geom_point() +
     geom_errorbar(aes(ymin = conf_low, ymax = conf_high, width = 0.2)) + 
     theme(axis.text.x = element_text(angle = 60, hjust = 1),
